--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==2.2.4
-pandas==2.2.3
-python-dateutil==2.9.0.post0
-pytz==2025.2
-six==1.17.0
-tzdata==2025.2
+
+pandas==1.3.5
+numpy==1.20.2
+scikit-learn==1.0.2
+matplotlib==3.5.1
+seaborn==0.11.2
